[gd_scene load_steps=3 format=2]

[ext_resource path="res://Sprites/Intro Text/Intro 2.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Intro Text/Intro 2.gd" type="Script" id=2]

[node name="Intro 2" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 512, 300 )
texture = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1048.0
margin_bottom = 215.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = -2.0
margin_top = 245.0
margin_right = 1046.0
margin_bottom = 359.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = -2.42468
margin_top = 351.044
margin_right = 1045.57
margin_bottom = 465.044
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line 2" type="Timer" parent="."]
wait_time = 2.0

[node name="Line 3" type="Timer" parent="."]
wait_time = 1.5

[node name="Line 4" type="Timer" parent="."]
wait_time = 2.0

[node name="Change Slide" type="Timer" parent="."]
[connection signal="tree_entered" from="." to="." method="_on_Intro_1_tree_entered"]
[connection signal="timeout" from="Line 2" to="." method="_on_Line_2_timeout"]
[connection signal="timeout" from="Line 3" to="." method="_on_Line_3_timeout"]
[connection signal="timeout" from="Line 4" to="." method="_on_Line_4_timeout"]
[connection signal="timeout" from="Line 4" to="." method="_on_Line_3_timeout"]
[connection signal="timeout" from="Change Slide" to="." method="_on_Change_Slide_timeout"]
